--- a/licensingservice/licensingservice-dev.yml
+++ b/licensingservice/licensingservice-dev.yml
@@ -1,3 +1,4 @@
+example.property: "I AM A PROD DEV OVERRIDE"
 spring.jpa.database: "POSTGRESQL"
 spring.datasource.platform:  "postgres"
 spring.jpa.show-sql: "false"
