--- a/licensingservice/licensingservice-dev.yml
+++ b/licensingservice/licensingservice-dev.yml
@@ -1,4 +1,4 @@
-example.property: "I AM A PROD DEV OVERRIDE"
+example.property: "I AM A DEV OVERRIDE"
 spring.jpa.database: "POSTGRESQL"
 spring.datasource.platform:  "postgres"
 spring.jpa.show-sql: "false"
